--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,38 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- DispatcherServlet : 过滤和加载mvc配置文件 -->
+	<servlet>
+		<servlet-name>DispatcherServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<!-- 只能加载spring mvc框架自己的配置文件 -->
+			<param-value>classpath:mvc-bean.xml</param-value>
+		</init-param>
+		<!-- 默认是第一个请求的时候才会实例化,此处需要设置tomcat启动时实例化（配置文件应该在项目启动时就加载） -->
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>DispatcherServlet</servlet-name>
+		<!-- 为了过滤非mvc请求,因此可以自定义规范 -->
+		<url-pattern>*.mvc</url-pattern>
+	</servlet-mapping>
+	
+	<!-- 配置spring配置文件的路径 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:spring-*.xml</param-value>
+	</context-param>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<listener>
+		<listener-class>cn.xm.listener.InitDataContextListener</listener-class>
+	</listener>
+  
 </web-app>
